--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
 	  <div class="row">
 		<div class="col-sm-4">
 
-		  <p>&copy 2016 Allan Lab. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="{{ site.url }}{{ site.baseurl }}/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.physics.leidenuniv.nl/">Leiden Institute of Physics</a> at <a href="https://www.leidenuniv.nl">Leiden University</a>.</p>
+		  <p>&copy 2023 PEM group. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="https://www.allanlab.org/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
+              <p>We are part of the <a href="https://www.tcd.ie/Botany/">>Discipline of Botany</a> at <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
 
 
 		   <p>  </p><p>
@@ -13,18 +13,18 @@
 
 		</div>
 		<div class="col-sm-4">
-		  Funding:<br />
-      - StG and CoG from the <a href="https://erc.europa.eu">ERC</a><br />
-		  - <a href="http://www.nwo.nl/en/research-and-results/programmes/Talent+Scheme">Vidi </a> and <a href='https://www.fom.nl/en/news/press-releases/2016/11/18/28634/'>Projectruimte</a> grants from <a href="http://www.nwo.nl">NWO</a> <br />
-		  - <a href="https://www.universiteitleiden.nl/en/research/research-projects/science/frontiers-of-nanoscience-nanofront">Frontier of Nanosciences</a>, a gravity program from <a href="http://www.nwo.nl">NWO</a>
+		  Social media:<br />
+      - Twitter <a href="https://twitter.com/SCaldararu">@SCaldararu</a><br />
+		  - BlueSky <a href="https://bsky.app/profile/scaldararu.bsky.social">@scaldararu.bsky.social</a><br />
+		  - Mastodon <a href="https://fediscience.org/@SCaldararu">@SCaldararu@fediscience.org</a>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
-		  Oort building, Leiden University<br />
-		  Niels Bohrweg 2<br />
-		  2333 CA Leiden<br />
-		  Netherlands <br />
-            (<a href="https://goo.gl/maps/H2RjutkyoUH2">Maps</a>, <a href="http://www.physics.leidenuniv.nl/travel-directions">Directions</a>)
+		  Botany, Trinity College Dublin<br />
+		  College Green<br />
+		  Dublin<br />
+		  Ireland <br />
+            (<a href="https://goo.gl/maps/3WpR8jK2jKorg9Sf7">Maps</a>)
 		</div>
 	  </div>
 	</div>
