--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
 		<div class="col-sm-4">
 
 		  <p>&copy 2023 PEM group. Site made with <a href="https://jekyllrb.com">Jekyll</a>;  <a href="https://www.allanlab.org/aboutwebsite.html">copy and  modify it for your own research group.</a></p>
-              <p>We are part of the <a href="https://www.tcd.ie/Botany/">>Discipline of Botany</a> at <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
+              <p>We are part of the <a href="https://www.tcd.ie/Botany/"> Discipline of Botany</a> at <a href="https://www.tcd.ie/">Trinity College Dublin</a>.</p>
 
 
 		   <p>  </p><p>
@@ -16,7 +16,7 @@
 		  Social media:<br />
       - Twitter <a href="https://twitter.com/SCaldararu">@SCaldararu</a><br />
 		  - BlueSky <a href="https://bsky.app/profile/scaldararu.bsky.social">@scaldararu.bsky.social</a><br />
-		  - Mastodon <a href="https://fediscience.org/@SCaldararu">@SCaldararu@fediscience.org</a>
+		  - Mastodon <a "rel=me" href="https://fediscience.org/@SCaldararu">@SCaldararu@fediscience.org</a>
 		</div>
 		<div class="col-sm-4">
 		  Contact:<br />
